# Nika-backend-mongo

./: .env  client.py  custom_worker.py  pyproject.toml
app/: config.py  database.py  main.py  schemas.py  test.py  utils.py
app/ai/chatgpt/: gpt.py
app/auth/: exceptions.py  routes.py  schemas.py  sms_api.py  tokens.py  user.py
app/auth/models/: auth.py  limits.py  user.py
app/auth/utils/: checks.py  sms.py
app/chat/: chat.py  exceptions.py  models.py
app/chatgpt/: context.py  gpt.py  schemas.py
app/payments/: models.py  promocode.py  tinkoff.py
